@@ -2,7 +2,7 @@
  OmegaT 2.6.2
 ----------------------------------------------------------------------
    8 Enhancements
-   3 Bug fixes
+   4 Bug fixes
    4 Localisation updates
 ----------------------------------------------------------------------
 2.6.2 vs. 2.6.1 update 2
@@ -47,6 +47,9 @@ correctly, which resulted in duplicate entries
 working copy, it was not possible to synchronise the project. Now, if
 the writeable glossary is outside the working copy, no attempt is done 
 to synchronise it.
+
+  - In the Fuzzy Matches pane, depending on the order of the options,
+the display could be corrupted when ${diff} was used
 
   Localisation updates:
 
